--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+  background: linear-gradient(to right, rgb(198, 154, 240), rgb(226, 43, 211))
+}
 #cal-container {
   margin: 40px auto;
   background-color: rgb(230, 20, 202);
